# Thesis

./: .gitignore
comparing_algorithms/cluster_centroids/: CMakeLists.txt  run.sh
comparing_algorithms/cluster_centroids/inc/: cluster_centroids.h  k_means_pp.h
comparing_algorithms/cluster_centroids/src/: cluster_centroids.cpp  k_means_pp.cpp  main.cpp
comparing_algorithms/decision_tree/: CMakeLists.txt  run.sh
comparing_algorithms/decision_tree/experiments/: experiment.txt
comparing_algorithms/decision_tree/src/: main.cpp
comparing_algorithms/edited_nearest_neighbors/: CMakeLists.txt  nohup.out  run.sh
comparing_algorithms/edited_nearest_neighbors/experiments/: experiment_.txt  experiment_k_5.txt
comparing_algorithms/edited_nearest_neighbors/inc/: edited_nearest_neighbors.h
comparing_algorithms/edited_nearest_neighbors/src/: edited_nearest_neighbors.cpp  main.cpp
comparing_algorithms/random_under_sampling/: CMakeLists.txt  nohup.out  run.sh
comparing_algorithms/random_under_sampling/experiments/: experiment.txt
comparing_algorithms/random_under_sampling/src/: main.cpp  random_under_sampling.cpp
decision_tree/inc/: basic_structures.h  decision_tree_classifier.h  validation.h
decision_tree/src/: main.cpp
edited_nearest_neighbors/: CMakeLists.txt  run.sh
edited_nearest_neighbors/inc/: edited_nearest_neighbors.h  file_operations.h
edited_nearest_neighbors/src/: decision_tree_classifier.cpp  edited_nearest_neighbors.cpp  file_operations.cpp  main.cpp  validation.cpp
inc/: decision_tree_classifier.h  k_means_pp.h  validation.h
proposed/: CMakeLists.txt  nohup.out  run.sh
proposed/experiments/: experiment.txt  experiment1.txt  experiment10.txt  experiment11.txt  experiment12.txt  experiment2.txt  experiment3.txt  experiment4.txt  experiment5.txt  experiment6.txt  experiment7.txt  experiment8.txt  experiment9.txt
proposed/inc/: decision_tree_classifier.h  k_means_pp.h  minimum_spanning_tree.h  prim.h  proposed.h  validation.h
proposed/src/: decision_tree_classifier.cpp  file_operations.cpp  k_means_pp.cpp  main  main.cpp  minimum_spanning_tree.cpp  proposed.cpp  validation.cpp
random_under_sampling/: CMakeLists.txt  run.sh
random_under_sampling/inc/: decision_tree_classifier.h  file_operations.h  random_under_sampling.h  validation.h
random_under_sampling/src/: main.cpp  random_under_sampling.cpp  validation.cpp
src/: decision_tree_classifier.cpp  file_operations.cpp  k_means_pp.cpp  prim.cpp  validation.cpp
